--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "prettier"
   ],
   "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/react-in-jsx-scope": 0,
